--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <body>
     <div class="container">
         <div id="calculator">
+            <div id="result">
+                <div id="history">
+                    <p id="history-value"></p>
+                    </div>
+                    <div id="output">
+                        <p id="output-value"></p>
+                    </div>
+                    </div>
             <div id="keyboard">
                 <button class="operator" id="clear">C</button>
                 <button class="operator" id="backspace">CE</button>
